@@ -1850,6 +1850,8 @@ static void overview_print_dun(char *buf, const struct level *lev)
 {
 	int dnum = lev->z.dnum;
 	int depthstart = dungeons[dnum].depth_start;
+	int entry_depth, reached_depth;
+
 	if (dnum == quest_dnum || dnum == knox_level.dnum ||
 		dnum == blackmarket_level.dnum) {
 	    /* The quest, knox and blackmarket should appear to be
@@ -1857,15 +1859,18 @@ static void overview_print_dun(char *buf, const struct level *lev)
 	     */
 	    depthstart = 1;
 	}
-	
-	/* Sokoban lies about dunlev_ureached and we should suppress
-	 * the negative numbers in the endgame. */
-	if (dungeons[dnum].dunlev_ureached == 1 ||
-	    dnum == sokoban_dnum || In_endgame(&lev->z))
+
+	entry_depth = depthstart + dungeons[dnum].entry_lev - 1;
+	reached_depth = depthstart + dungeons[dnum].dunlev_ureached - 1;
+
+	if (entry_depth == reached_depth || In_endgame(&lev->z)) {
+	    /* Suppress negative numbers in the endgame. */
 	    sprintf(buf, "%s:", dungeons[dnum].dname);
-	else
+	} else {
 	    sprintf(buf, "%s: levels %d to %d", dungeons[dnum].dname,
-		    depthstart, depthstart + dungeons[dnum].dunlev_ureached - 1);
+		    min(entry_depth, reached_depth),
+		    max(entry_depth, reached_depth));
+	}
 }
 
 
